- don't use translated strings as ids - each rowgroup should be in its own tbody - fix rowgroup header alignment

--- a/bundles/org.eclipse.orion.client.ui/web/css/controls.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/controls.css
@@ -665,6 +665,10 @@ html[dir="rtl"] .keyAssistFloat { /* ACGC */
 	outline: none;
 }
 
+.keyAssistSection th {
+	text-align: start;
+}
+
 .keyAssistItem {
 }
 
